cabal-version:      2.4
name:               aletheia
version:            0.1.0.0
synopsis:           Formally verified CAN frame analysis
description:        
    Aletheia provides proven-correct CAN frame encoding/decoding and
    LTL verification. This is the Haskell I/O shim that wraps the
    Agda-generated core.
license:            BSD-3-Clause
author:             Aletheia Team
maintainer:         aletheia@example.com
category:           Verification
build-type:         Simple

executable aletheia
    main-is:          Main.hs
    hs-source-dirs:   src, .
    build-depends:
        base >= 4.14 && < 5,
        text >= 1.2
    default-language: Haskell2010
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -- Suppress warnings for generated MAlonzo code
        -Wno-unused-imports
        -Wno-missing-signatures
        -Wno-unused-matches
        -Wno-missing-home-modules
