cabal-version:      2.4
name:               aletheia
version:            0.3.1.0
synopsis:           Formally verified CAN frame analysis
description:        
    Aletheia provides proven-correct CAN frame encoding/decoding and
    LTL verification. This is the Haskell I/O shim that wraps the
    Agda-generated core.
license:            BSD-2-Clause
author:             Aletheia Team
maintainer:         aletheia@example.com
category:           Verification
build-type:         Simple

foreign-library aletheia-ffi
    type:             native-shared
    other-modules:    AletheiaFFI
    hs-source-dirs:   src, .
    build-depends:
        base >= 4.14 && < 5,
        text >= 1.2
    default-language: Haskell2010
    ghc-options:
        -O2
        -funfolding-use-threshold=200
        -fmax-simplifier-iterations=10
        -fsplit-sections
        -fspec-constr-count=10
        -Wno-unused-imports
        -Wno-missing-signatures
        -Wno-unused-matches
        -Wno-missing-home-modules
