[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "1.1.1"
description = "Formally verified CAN frame analysis with LTL"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Nicolas Pelletier"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# The core package has no runtime dependencies outside the standard library —
# the Agda-compiled Haskell shared library is loaded via ``ctypes`` at import
# time, and ``dbc_to_json`` runs end-to-end through the verified Agda parser
# (no third-party Python deps). Optional extras gate the CAN log reader
# (python-can), YAML rule loader (pyyaml), and Excel rule loader (openpyxl).
# Install with:
#   pip install aletheia               # core only (Agda DBC parser included)
#   pip install aletheia[can]          # + CAN log reader
#   pip install aletheia[yaml]         # + YAML rule loader
#   pip install aletheia[excel]        # + Excel rule/DBC loader
#   pip install aletheia[all]          # everything
dependencies = []

[project.scripts]
aletheia = "aletheia.cli:main"

[tool.setuptools.packages.find]
# Exact package list — ``aletheia*`` also matched stray top-level helpers when
# the project briefly had scratch modules at the repo root; pin to the real
# package and its subpackages to make the wheel contents reproducible.
include = ["aletheia", "aletheia.*"]

[tool.setuptools.package-data]
# Only ``py.typed`` today (PEP 561 type-disclosure marker). Rule for future
# additions: any non-``.py`` resource shipped inside the wheel (JSON schemas,
# DBC templates, example config) MUST be listed here explicitly — setuptools
# does NOT pick up data files automatically under
# ``[tool.setuptools.packages.find]``. Add the pattern here AND verify the
# file appears inside ``dist/aletheia-*.whl`` via ``python -m zipfile -l``.
aletheia = ["py.typed", "*.pyi"]

[project.optional-dependencies]
can = ["python-can>=4.0"]
yaml = ["pyyaml>=6.0"]
excel = ["openpyxl>=3.1"]
# Self-reference the individual extras so version pins live in exactly one
# place (SSOT). Editing can/yaml/excel above automatically flows through
# to ``aletheia[all]`` without manual string duplication.
all = ["aletheia[can,yaml,excel]"]
dev = [
    "aletheia[all]",
    # Upper bounds guard against the next major — AGENTS.md hard-gates the
    # review cycle on pylint 10.00/10 and basedpyright 0/0/0, so a breaking
    # major release would silently regress CI.  Bump the upper bound
    # (and re-verify the gates) on a new major rather than floating.
    #
    # Gate mapping (which upper bound protects which CI check):
    #   pylint<5              — protects the ``pylint aletheia/`` 10.00/10 gate
    #   basedpyright<2        — protects the ``basedpyright aletheia/`` 0/0/0 gate
    #   pytest<9              — protects the ``pytest tests/`` exit code
    #   pytest-cov<7          — protects coverage report shape (AGENTS.md R/N)
    #   pytest-markdown-docs<1 — protects the AGENTS.md Cat 32 doc-example gate
    #                             (repo-root ``conftest.py`` injects globals / loader
    #                             fakes so every ``python`` fence across README /
    #                             docs/** runs end-to-end against the real FFI).
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<7",
    "pytest-markdown-docs>=0.9.2,<1",
    # AGENTS.md Python cat 14(f) (NEW R18) requires test-isolation runs via
    # ``pytest --random-order --random-order-bucket=package`` alongside the
    # deterministic lane.  Both must stay green.
    "pytest-random-order>=1.1,<2",
    # AGENTS.md Python cat 34(b) (NEW R18) — hypothesis-driven property
    # tests for every wire-format encode/decode pair.  Profiles pinned in
    # ``python/tests/conftest.py`` (CI ``max_examples=200``, dev ``=20``).
    "hypothesis>=6.0,<7",
    "pylint>=4.0,<5",
    "basedpyright>=1.0,<2",
    # AGENTS.md Python cat 25 long-run sub-check (NEW R18) — psutil drives
    # ``python/benchmarks/stability.py`` (RSS, num_fds).  Keep in [dev] so the
    # stability harness runs without an extra extras flag; the harness is
    # opt-in via ``ALETHEIA_STABILITY_CHECK=1`` so the dependency only
    # surfaces in dev environments.
    "psutil>=5.0,<8",
]
# AGENTS.md Python cat 34(c) (NEW R18) opt-in fuzz extras.  Atheris is a
# 35 MB native binary, so it lives in its own group rather than ``[dev]``;
# only the fuzz lane installs it.  Hypothesis stays in ``[dev]`` because
# property tests run in every standard pytest invocation.
fuzz = ["atheris>=3.0,<4"]
# AGENTS.md Python cat 14(g) (NEW R18) opt-in mutation-testing extras.  mutmut
# is the AGENTS.md-named first-choice tool; pinned to 3.x where the cli +
# pyproject ``[tool.mutmut]`` config still works.  Lives in its own group
# rather than ``[dev]`` because the lane is opt-in only (per AGENTS.md "once
# per PR is sufficient; per-commit is overkill") and pulls a sizeable mutation
# trampoline machinery + tooling deps.
mutation = ["mutmut>=3.5,<4"]

[tool.basedpyright]
# Strict type checking for code we control
typeCheckingMode = "strict"
stubPath = "stubs"
venvPath = ".."
venv = ".venv"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportExplicitAny = "error"  # Force explicit structure definitions instead of Any
reportPrivateUsage = "error"  # Disallow accessing private members
reportMissingModuleSource = false  # _install_config.py is generated at install time
reportImplicitStringConcatenation = "error"  # Require explicit + for string concatenation

[tool.pylint.main]
# Match AGENTS.md Python gate: pylint 10.00/10 on the ``aletheia/`` package.
# Line length follows PEP 8 Black-ish; existing code uses up to 100 chars.
max-line-length = 100
# Parallelise across all cores — pylint walks 20+ modules on every run.
jobs = 0
ignore = ["benchmarks", "stubs", ".venv", "build"]
# ``.`` is the source root so pylint resolves ``aletheia.*`` without the
# package being pip-installed (canonical flow is ``pip install -e .[dev]``
# inside ``python/.venv``; this entry keeps the gate working outside it).
source-roots = ["."]
# ``tests/`` isn't a package (no ``__init__.py`` — pytest discovers by
# path), but tests import siblings (``_dbc_helpers``, ``conftest``)
# directly.  pytest adds the test dir to ``sys.path`` automatically;
# pylint needs this ``init-hook`` to do the same.
init-hook = 'import sys; sys.path.insert(0, "tests")'
# ctypes lacks full stubs; pyright handles the real type checks, so silence
# pylint's redundant no-member/import-error noise for it. Revisit if upstream
# gains complete type stubs — at that point pylint can infer members directly
# and this allow-list becomes dead weight.
extension-pkg-allow-list = ["ctypes"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
# No blanket disables — every suppression in the tree is inline with a
# per-line justification.  This section exists so pylint picks up the
# config file (pylint skips the [tool.pylint.main] section for disables).
disable = []

[tool.pytest.ini_options]
# Single source of truth for the pytest invocation used in CI / AGENTS.md.
# ``testpaths`` avoids collecting the generated ``build/`` tree; strict
# markers/config catches typos in fixtures or xfail reasons at startup.
# ``minversion`` pins the pytest floor so CI fails loudly at startup rather
# than producing subtly-different reports when a dev env drifts.
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
minversion = "7.0"

[tool.coverage.run]
# Coverage config skeleton — pytest-cov is in the ``dev`` extras so this
# block is live whenever developers opt into coverage via
# ``pytest --cov=aletheia``. The release gate in AGENTS.md is test-count-
# based, not coverage-based; these settings stop the tool from counting
# generated/FFI boundary code that isn't meaningfully reachable from tests.
branch = true
source = ["aletheia"]
omit = [
    "aletheia/_install_config.py",
    "aletheia/client/_ffi.py",
]

[tool.coverage.report]
# Show lines that weren't covered so developers can tighten unit tests
# directly; don't fail the build on a coverage threshold (gate-free).
show_missing = true
skip_covered = false

[tool.mutmut]
# AGENTS.md Python cat 14(g) (NEW R18) — mutation testing config.  Hot-path
# modules per AGENTS.md, mapped to the actual on-disk paths after the
# protocols split (``client.py`` -> ``aletheia/client/_client.py``) and the
# Track E.11 validation extraction (``validation.py`` is new).  ``dbc_loader.py``
# from AGENTS.md was renamed/split into ``dbc_converter.py`` + ``yaml_loader.py``;
# both included.  See ``docs/MUTATION_BENCH.yaml`` for the canonical list and
# the static gate that enforces it.
#
# Implementation note: mutmut 3.x copies ONLY the files in ``paths_to_mutate``
# plus those in ``also_copy`` to the ``mutants/`` work tree.  Tests run from
# inside that tree, so the whole ``aletheia/`` package needs to be present
# (siblings import each other).  We mutate just the 5 hot-path files via
# ``paths_to_mutate``, and copy the rest of the package via ``also_copy`` so
# every ``from aletheia import ...`` resolves inside ``mutants/``.
paths_to_mutate = [
    "aletheia/client/_client.py",
    "aletheia/dbc_converter.py",
    "aletheia/yaml_loader.py",
    "aletheia/validation.py",
    "aletheia/protocols.py",
]
also_copy = [
    "aletheia",
]
tests_dir = ["tests/"]
# pytest invocation used to verify each mutant: keep cheap by skipping the
# slowest non-mutation gates (the doc-example harness, the random-order lane,
# the property-based hypothesis tests, the cross-binding parity tests — none
# of them exercise the hot-path modules above with finer granularity than the
# unit tests).  Mutmut walks ALL tests in tests_dir by default, so this
# narrowing is via a deselect rather than a select.
pytest_add_cli_args = [
    "--no-header",
    "-x",
    # Tests that fail under mutmut's mutated-tree cwd because they expect
    # repo-root paths (find_repo_root() / ../../docs/FEATURE_MATRIX.yaml /
    # ../../docs/LOG_EVENTS.yaml etc.); they are infrastructure-coverage
    # tests, NOT hot-path coverage, so excluding them does not weaken the
    # mutation lane's signal on the 5 modules above.
    "--ignore=tests/test_doc_examples_harness.py",
    "--ignore=tests/test_property_hypothesis.py",
    "--ignore=tests/test_cross_binding_integration.py",
    "--ignore=tests/test_feature_matrix_parity.py",
    "--ignore=tests/test_log_events_parity.py",
    "--ignore=tests/test_unified_client.py",
    "--ignore=tests/test_format_dbc.py",
]
